[package]
name = "rust-hello"
version = "0.1.0"
authors = ["lhh <776334655@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "0.98.0"
linked-list = "0.0.3"
regex = "1.0.5"
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
rand = "0.6.0"

serde = { version = "1.0", features = ["derive"] }
# serde_json is just for the example, not required in general
serde_json = "1.0"