[package]
name = "d_thread"
version = "0.1.0"
authors = ["livo <1197829331@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = ""
num = ""
threadpool = ""
image = ""
num_cpus = ""
julia =""
sys = ""
